--- a/build.gradle
+++ b/build.gradle
@@ -19,9 +19,11 @@ repositories {
 }
 
 dependencies {
+	compile group: 'com.zaxxer', name: 'HikariCP', version: '3.4.1'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compileOnly 'org.projectlombok:lombok'
+	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
