--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+spring.datasource.url=jdbc:postgresql://localhost:5432/tbrm
+spring.datasource.hikari.driver-class-name=org.postgresql.Driver
+spring.datasource.hikari.password=root
+spring.datasource.hikari.username=postgres
