added application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.url=jdbc:postgresql://localhost:5432/tbrm
-spring.datasource.hikari.driver-class-name=org.postgresql.Driver
-spring.datasource.hikari.password=root
-spring.datasource.hikari.username=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.password=root
+spring.datasource.username=postgres
+
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
