--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.url=jdbc:postgresql://localhost:5432/tbrm
+spring.datasource.url=jdbc:postgresql://localhost:5432/resourse_management
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.password=root
+spring.datasource.password=2008
 spring.datasource.username=postgres
 
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
