--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,11 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-acl'
+	implementation 'org.springframework.security:spring-security-config'
+	implementation 'org.springframework:spring-context-support'
+	implementation 'net.sf.ehcache:ehcache-core:2.6.11'
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
