--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,10 @@ repositories {
 dependencies {
 	compile group: 'com.zaxxer', name: 'HikariCP', version: '3.4.1'
 	compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.6'
+	testCompile "org.powermock:powermock-module-junit4:1.6.6"
+	testCompile "org.powermock:powermock-module-junit4-rule:1.6.6"
+	testCompile "org.powermock:powermock-api-mockito:1.6.6"
+	testCompile "org.powermock:powermock-classloading-xstream:1.6.6"
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-configuration-processor'
@@ -32,6 +36,7 @@ dependencies {
 	}
 	compile 'io.springfox:springfox-swagger2:2.9.2'
 	compile 'io.springfox:springfox-swagger-ui:2.9.2'
+
 }
 
 test {
