--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+secretKey=4C8kum4LxyKWYLM78sKdXrzbBjDCFyfX
+expireTimeAccessToken=100000
+expireTimeRefreshToken=5184000000
