--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,9 @@ repositories {
 dependencies {
 	compile group: 'com.zaxxer', name: 'HikariCP', version: '3.4.1'
 	compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.6'
+	//implementation 'org.springframework.boot:spring-boot-starter-security'
+	//implementation 'org.springframework.security:spring-security-acl'
+	//implementation 'org.springframework.security:spring-security-config'
 	testCompile "org.powermock:powermock-module-junit4:1.6.6"
 	testCompile "org.powermock:powermock-module-junit4-rule:1.6.6"
 	testCompile "org.powermock:powermock-api-mockito:1.6.6"
