--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ repositories {
 dependencies {
 	compile group: 'com.zaxxer', name: 'HikariCP', version: '3.4.1'
 	compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.6'
+	compile group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.11.133'
 	//implementation 'org.springframework.boot:spring-boot-starter-security'
 	//implementation 'org.springframework.security:spring-security-acl'
 	//implementation 'org.springframework.security:spring-security-config'
