--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,8 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	testImplementation 'org.springframework.security:spring-security-test'
-
+	testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.2'
+	testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.2'
 	compile 'io.springfox:springfox-swagger2:2.9.2'
 	compile 'io.springfox:springfox-swagger-ui:2.9.2'
 }
