--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,15 @@ dependencies {
 	compile group: 'com.zaxxer', name: 'HikariCP', version: '3.4.1'
 	compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.6'
 	compile group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.11.133'
-	//implementation 'org.springframework.boot:spring-boot-starter-security'
-	//implementation 'org.springframework.security:spring-security-acl'
-	//implementation 'org.springframework.security:spring-security-config'
-	testCompile "org.powermock:powermock-module-junit4:1.6.6"
-	testCompile "org.powermock:powermock-module-junit4-rule:1.6.6"
-	testCompile "org.powermock:powermock-api-mockito:1.6.6"
-	testCompile "org.powermock:powermock-classloading-xstream:1.6.6"
+//    compile "org.springframework.boot:spring-boot-starter-security"
+//	implementation 'org.springframework.boot:spring-boot-starter-security'
+//	implementation 'org.springframework.security:spring-security-acl'
+//	implementation 'org.springframework.security:spring-security-config'
+	compile 'org.powermock:powermock-module-junit4:2.0.4'
+	compile 'org.powermock:powermock-api-mockito2:2.0.4'
+	compile 'org.hibernate:hibernate-validator:4.2.0.Final'
+//	testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.2'
+//	testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.2'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-configuration-processor'
