--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ jacocoTestReport {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+//    compile 'junit:junit:4.12'
+
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
@@ -44,5 +46,8 @@ dependencies {
 }
 
 test {
-    useJUnitPlatform()
+    useJUnit()
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
 }
