--- a/build.gradle
+++ b/build.gradle
@@ -20,11 +20,19 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    runtimeOnly 'org.postgresql:postgresql'
+
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.6'
+	compile 'io.springfox:springfox-swagger-ui:2.9.2'
+	compile 'io.springfox:springfox-swagger2:2.9.2'
+	compile 'org.powermock:powermock-module-junit4:2.0.4'
+    compile 'org.powermock:powermock-api-mockito2:2.0.4'
 }
 
 test {
