--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,8 @@ jacocoTestReport {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-configuration-processor'
+
 //    compile 'junit:junit:4.12'
 
     compileOnly 'org.projectlombok:lombok'
@@ -40,7 +42,10 @@ dependencies {
     }
     compile 'io.springfox:springfox-swagger2:2.9.2'
     compile 'io.springfox:springfox-swagger-ui:2.9.2'
+    compile group: 'org.postgresql', name: 'postgresql', version: '42.2.9'
+    compile group: 'com.zaxxer', name: 'HikariCP', version: '3.4.1'
     compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.6'
+    compile group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.11.133'
     testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.2'
     testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.2'
 }
@@ -51,3 +56,5 @@ test {
         events "passed", "skipped", "failed"
     }
 }
+
+
