--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'org.springframework.boot' version '2.2.4.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
 	id 'java'
+	id 'jacoco'
+	id 'com.github.kt3k.coveralls' version "2.9.0"
 }
 
 group = 'com.softserve'
@@ -18,23 +20,41 @@ repositories {
 	mavenCentral()
 }
 
+jacocoTestReport {
+	reports {
+		xml.enabled = true // coveralls plugin depends on xml format report
+		html.enabled = true
+	}
+}
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    runtimeOnly 'org.postgresql:postgresql'
+	implementation 'org.springframework.boot:spring-boot-configuration-processor'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.security:spring-security-acl'
+	implementation 'org.springframework.security:spring-security-config'
+	implementation 'org.springframework:spring-context-support'
+	implementation 'net.sf.ehcache:ehcache-core:2.6.11'
 
 	compileOnly 'org.projectlombok:lombok'
+	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
-	compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.6'
-	compile 'io.springfox:springfox-swagger-ui:2.9.2'
+	testImplementation 'org.springframework.security:spring-security-test'
 	compile 'io.springfox:springfox-swagger2:2.9.2'
-	compile 'org.powermock:powermock-module-junit4:2.0.4'
-    compile 'org.powermock:powermock-api-mockito2:2.0.4'
+	compile 'io.springfox:springfox-swagger-ui:2.9.2'
+	compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.6'
+	compile group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.11.133'
+	testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.2'
+	testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.2'
 }
 
 test {
-	useJUnitPlatform()
+	useJUnit()
+	testLogging {
+		events "passed", "skipped", "failed"
+	}
 }
