--- a/build.gradle
+++ b/build.gradle
@@ -22,11 +22,24 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
+
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.security:spring-security-acl'
 	implementation 'org.springframework.security:spring-security-config'
 	implementation 'org.springframework:spring-context-support'
 	implementation 'net.sf.ehcache:ehcache-core:2.6.11'
+
+
+	compile group: 'io.springfox', name: 'springfox-swagger2', version: '2.9.2'
+	compile group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.9.2'
+
+	testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.2'
+	testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.2'
+
+
+	compile group: 'net.bytebuddy', name: 'byte-buddy', version: '1.9.10'
+
+
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'org.postgresql:postgresql'
 	annotationProcessor 'org.projectlombok:lombok'
@@ -34,6 +47,8 @@ dependencies {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
 	testImplementation 'org.springframework.security:spring-security-test'
+
+
 }
 
 test {
