--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 	implementation 'org.springframework.security:spring-security-config'
 	implementation 'org.springframework:spring-context-support'
 	implementation 'net.sf.ehcache:ehcache-core:2.6.11'
-
+	compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
     compileOnly 'org.projectlombok:lombok'
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
@@ -46,6 +46,7 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	compile 'io.springfox:springfox-swagger2:2.9.2'
     compile 'io.springfox:springfox-swagger-ui:2.9.2'
+	compile group: 'net.bytebuddy', name: 'byte-buddy', version: '1.9.10'
     compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.6'
     compile group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.11.133'
     testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.2'
@@ -58,5 +59,3 @@ test {
         events "passed", "skipped", "failed"
     }
 }
-
-
