--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,9 @@ dependencies {
         exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
     }
 	testImplementation 'org.springframework.security:spring-security-test'
+    compile("io.springfox:springfox-swagger2:2.9.2") {
+        exclude module: 'mapstruct'
+    }
 	compile 'io.springfox:springfox-swagger2:2.9.2'
     compile 'io.springfox:springfox-swagger-ui:2.9.2'
 	compile group: 'net.bytebuddy', name: 'byte-buddy', version: '1.9.10'
@@ -51,6 +54,7 @@ dependencies {
     compile group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.11.133'
     testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.2'
     testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.2'
+    compile 'io.springfox:springfox-bean-validators:2.9.2'
 }
 
 test {
