--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
- Datasource
+Datasource
 spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=${DATASOURCE_USER}
 spring.datasource.password=${DATASOURCE_PASSWORD}
@@ -12,6 +12,7 @@ secretKey=4C8kum4LxyKWYLM78sKdXrzbBjDCFyfX
 expireTimeAccessToken=36000000
 expireTimeRefreshToken=5184000000
 
+spring.jooq.sql-dialect=POSTGRES
 #spring.datasource.url=jdbc:postgresql://localhost:5432/tbrm
 #spring.datasource.username=postgres
 #spring.datasource.password=root
