Add jooq configuration

--- a/build.gradle
+++ b/build.gradle
@@ -76,14 +76,18 @@ jooq {
     sample(sourceSets.main) {
         jdbc {
             driver = 'org.postgresql.Driver'
-            url = '${DATASOURCE_URL}'
-            user = '${DATASOURCE_USER}'
-            password = '${DATASOURCE_PASSWORD}'
+            url = 'jdbc:postgresql://localhost:5432/tbrm'
+//            url = '${DATASOURCE_URL}'
+            user = 'lviv465'
+//            user = '${DATASOURCE_USER}'
+            password = 'secret'
+//            password = '${DATASOURCE_PASSWORD}'
         }
         generator {
             name = 'org.jooq.codegen.DefaultGenerator'
             database {
                 name = 'org.jooq.meta.postgres.PostgresDatabase'
+                inputSchema = 'public'
             }
 
             // Watch out for this caveat when using MarkupBuilder with "reserved names"
@@ -95,27 +99,27 @@ jooq {
                 daos = true
             }
             target {
-                packageName = 'com.softserve.rms.database'
-//                directory = 'src/main/java'
+                packageName = 'com.softserve.rms.jooq'
+                directory = 'src/main/java'
             }
         }
     }
 }
 
-tasks.generateSampleJooqSchemaSource.with {
-    def out = new ByteArrayOutputStream()
-    javaExecSpec = { JavaExecSpec s ->
-        s.standardOutput = out
-        s.errorOutput = out
-        s.ignoreExitValue = true
-        s.jvmArgs '-Xmx512M'
-    }
-    execResultHandler = { ExecResult r ->
-        if (r.exitValue != 0) {
-            throw new RuntimeException('jOOQ source code generation failed:\n\n' + out.toString())
-        }
-    }
-}
+//tasks.generateSampleJooqSchemaSource.with {
+//    def out = new ByteArrayOutputStream()
+//    javaExecSpec = { JavaExecSpec s ->
+//        s.standardOutput = out
+//        s.errorOutput = out
+//        s.ignoreExitValue = true
+//        s.jvmArgs '-Xmx512M'
+//    }
+//    execResultHandler = { ExecResult r ->
+//        if (r.exitValue != 0) {
+//            throw new RuntimeException('jOOQ source code generation failed:\n\n' + out.toString())
+//        }
+//    }
+//}
 
 
 // Run the code generator
