--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-Datasource
+#Datasource
 spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=${DATASOURCE_USER}
 spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-Hibernate
+#Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
@@ -11,9 +11,5 @@ spring.datasource.initialization-mode=always
 secretKey=4C8kum4LxyKWYLM78sKdXrzbBjDCFyfX
 expireTimeAccessToken=36000000
 expireTimeRefreshToken=5184000000
-
+#Jooq
 spring.jooq.sql-dialect=POSTGRES
-#spring.datasource.url=jdbc:postgresql://localhost:5432/tbrm
-#spring.datasource.username=postgres
-#spring.datasource.password=root
-#spring.datasource.driver-class-name=org.postgresql.Driver
