--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ spring.datasource.initialization-mode=always
 secretKey=4C8kum4LxyKWYLM78sKdXrzbBjDCFyfX
 expireTimeAccessToken=36000000
 expireTimeRefreshToken=5184000000
+
+spring.servlet.multipart.max-file-size=7MB
+spring.servlet.multipart.max-request-size=7MB
