refactored publish and unpublish resource template methods, added createResourceContainerTable method using jooq, added new parameter type reference, improved javadocs

--- a/build.gradle
+++ b/build.gradle
@@ -78,9 +78,9 @@ jooq {
             driver = 'org.postgresql.Driver'
             url = 'jdbc:postgresql://localhost:5432/tbrm'
 //            url = '${DATASOURCE_URL}'
-            user = 'lviv465'
+            user = 'postgres'
 //            user = '${DATASOURCE_USER}'
-            password = 'secret'
+            password = 'root'
 //            password = '${DATASOURCE_PASSWORD}'
         }
         generator {
