--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 
 secretKey=4C8kum4LxyKWYLM78sKdXrzbBjDCFyfX
-expireTimeAccessToken=36000000
+expireTimeAccessToken=60000
 expireTimeRefreshToken=5184000000
 
 spring.servlet.multipart.max-file-size=7MB
 spring.servlet.multipart.max-request-size=7MB
+
+# SECURITY OAUTH2 CLIENT (OAuth2ClientProperties)
+spring.security.oauth2.client.registration.google.client-id=733965756435-vub54974irojnqi040c3cp6c2t1n8ofb.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=Qm_SNNrp41tHncRX-EdkVQtp
+spring.security.oauth2.client.registration.google.redirect-uri="http://localhost:8080/oauth2/callback/google"
+spring.security.oauth2.client.registration.google.scope=openid,email,profile
