--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,16 @@ dependencies {
     compile("io.springfox:springfox-swagger2:2.9.2") {
         exclude module: 'mapstruct'
     }
-	compile 'io.springfox:springfox-swagger2:2.9.2'
+
+    compile group: 'org.springframework.security', name: 'spring-security-oauth2-client', version: '5.2.2.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version: '5.2.2.RELEASE'
+    //compile group: 'com.google.api-client', name: 'google-api-client', version: '1.30.8'
+    compile group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '8.6'
+    compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.0.2.RELEASE'
+
+
+
+    compile 'io.springfox:springfox-swagger2:2.9.2'
     compile 'io.springfox:springfox-swagger-ui:2.9.2'
     compile 'javax.validation:validation-api:2.0.1.Final'
 	compile group: 'net.bytebuddy', name: 'byte-buddy', version: '1.9.10'
