--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,3 @@
-
 plugins {
     id 'org.springframework.boot' version '2.2.4.RELEASE'
     id 'io.spring.dependency-management' version '1.0.9.RELEASE'
@@ -38,7 +37,6 @@ dependencies {
     implementation 'org.springframework.security:spring-security-config'
     implementation 'org.jooq:jooq'
     implementation 'org.springframework:spring-context-support'
-//    implementation 'org.springframework.boot:spring-boot-starter-jooq'
     implementation 'net.sf.ehcache:ehcache-core:2.6.11'
     compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.9.1'
     compileOnly 'org.projectlombok:lombok'
@@ -53,6 +51,8 @@ dependencies {
     }
     compile 'io.springfox:springfox-swagger2:2.9.2'
     compile 'io.springfox:springfox-swagger-ui:2.9.2'
+    compile 'javax.validation:validation-api:2.0.1.Final'
+	compile group: 'net.bytebuddy', name: 'byte-buddy', version: '1.9.10'
     compile group: 'net.bytebuddy', name: 'byte-buddy', version: '1.9.10'
     compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.6'
     compile group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.11.133'
