--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,14 @@ spring.servlet.multipart.max-file-size=7MB
 spring.servlet.multipart.max-request-size=7MB
 
 # SECURITY OAUTH2 CLIENT (OAuth2ClientProperties)
-spring.security.oauth2.client.registration.google.client-id=733965756435-vub54974irojnqi040c3cp6c2t1n8ofb.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=Qm_SNNrp41tHncRX-EdkVQtp
-spring.security.oauth2.client.registration.google.redirect-uri="http://localhost:8080/oauth2/callback/google"
+spring.security.oauth2.client.registration.google.client-id=733965756435-bsql7crsvtrd1s7a27ad6397836805n7.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=q152nQz9PvOj5o0-xZ4OmnoQ
+spring.security.oauth2.client.registration.google.redirect-uri="http://localhost:3000/oauth2/callback/google"
 spring.security.oauth2.client.registration.google.scope=openid,email,profile
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/.well-known/jwks.json
+
+#spring.main.allow-bean-definition-overriding=true
+
+
+
+
