create multitenancy structure

--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     testCompile group: 'org.powermock', name: 'powermock-module-junit4', version: '2.0.2'
     testCompile group: 'org.powermock', name: 'powermock-api-mockito2', version: '2.0.2'
     compile 'io.springfox:springfox-bean-validators:2.9.2'
+    compile 'org.springframework.boot:spring-boot-starter-actuator:2.2.4.RELEASE'
+    compile 'org.springframework.cloud:spring-cloud-config-server:2.1.6.RELEASE'
 }
 
 test {
