--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,20 +11,21 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 
 secretKey=4C8kum4LxyKWYLM78sKdXrzbBjDCFyfX
-expireTimeAccessToken=60000
+expireTimeAccessToken=100000
 expireTimeRefreshToken=5184000000
 
 spring.servlet.multipart.max-file-size=7MB
 spring.servlet.multipart.max-request-size=7MB
+spring.security.oauth2.client.registration.google.client-id=25395617062-uiebbfskb9l2fd0pbi47hsrkl6rsi7ql.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=Cp_MQm26U8ak5daFQWcmB7Zs
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/oauth2/callback/google
+spring.security.oauth2.client.registration.google.scope=email, profile
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
+authorizedRedirectUri=http://localhost:3000/oauth2/redirect
 
-# SECURITY OAUTH2 CLIENT (OAuth2ClientProperties)
-spring.security.oauth2.client.registration.google.client-id=733965756435-bsql7crsvtrd1s7a27ad6397836805n7.apps.googleusercontent.com
-spring.security.oauth2.client.registration.google.client-secret=q152nQz9PvOj5o0-xZ4OmnoQ
-spring.security.oauth2.client.registration.google.redirect-uri="http://localhost:3000/oauth2/callback/google"
-spring.security.oauth2.client.registration.google.scope=openid,email,profile
-spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8080/.well-known/jwks.json
+fullRegistrationRedirectUri=http://localhost:3000/oauth2/fullRegister
 
-#spring.main.allow-bean-definition-overriding=true
+
 
 
 
