--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,35 @@
-#Datasource
+# Datasource
 spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=${DATASOURCE_USER}
 spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
 #Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
+
 secretKey=4C8kum4LxyKWYLM78sKdXrzbBjDCFyfX
 expireTimeAccessToken=36000000
 expireTimeRefreshToken=5184000000
+
 spring.servlet.multipart.max-file-size=7MB
 spring.servlet.multipart.max-request-size=7MB
+
+# configuration email
+#spring.mail.transport.protocol=smtp
+#spring.mail.from.email=${EMAIL}
+spring.mail.port=587
+spring.mail.host=smtp.gmail.com
+spring.mail.username=${EMAIL}
+spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
+#Envers
+spring.jpa.properties.org.hibernate.envers.store_data_at_delete=true
+
 #Jooq
 spring.jooq.sql-dialect=POSTGRES
