--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,8 @@
-# Datasource
+#Datasource
 spring.datasource.url=${DATASOURCE_URL}
 spring.datasource.username=${DATASOURCE_USER}
 spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-
 #Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
@@ -11,11 +10,20 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 
 secretKey=4C8kum4LxyKWYLM78sKdXrzbBjDCFyfX
-expireTimeAccessToken=36000000
+expireTimeAccessToken=100000
 expireTimeRefreshToken=5184000000
 
 spring.servlet.multipart.max-file-size=7MB
 spring.servlet.multipart.max-request-size=7MB
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${
+spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/oauth2/callback/google
+spring.security.oauth2.client.registration.google.scope=email, profile
+spring.security.oauth2.client.provider.google.user-name-attribute=sub
+authorizedRedirectUri=http://localhost:3000/oauth2/redirect
+
+fullRegistrationRedirectUri=http://localhost:3000/oauth2/fullRegister
+
 
 # configuration email
 #spring.mail.transport.protocol=smtp
