--- a/build.gradle
+++ b/build.gradle
@@ -49,6 +49,12 @@ dependencies {
     compile("io.springfox:springfox-swagger2:2.9.2") {
         exclude module: 'mapstruct'
     }
+
+    compile group: 'org.springframework.security', name: 'spring-security-oauth2-client', version: '5.2.1.RELEASE'
+    compile group: 'org.springframework.security', name: 'spring-security-oauth2-jose', version: '5.2.1.RELEASE'
+    compile group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '8.6'
+    compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.0.2.RELEASE'
+
     compile 'io.springfox:springfox-swagger2:2.9.2'
     compile 'io.springfox:springfox-swagger-ui:2.9.2'
     compile 'javax.validation:validation-api:2.0.1.Final'
@@ -56,7 +62,6 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-mail:2.2.4.RELEASE'
     compile 'javax.mail:mail:1.5.0-b01'
 	compile group: 'net.bytebuddy', name: 'byte-buddy', version: '1.9.10'
-    compile group: 'net.bytebuddy', name: 'byte-buddy', version: '1.9.10'
     compile group: 'org.modelmapper', name: 'modelmapper', version: '2.3.6'
     compile group: 'com.amazonaws', name: 'aws-java-sdk', version: '1.11.133'
     jooqRuntime 'postgresql:postgresql:9.1-901.jdbc4'
