--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,13 +10,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.initialization-mode=always
 
 secretKey=4C8kum4LxyKWYLM78sKdXrzbBjDCFyfX
-expireTimeAccessToken=600000000
+expireTimeAccessToken=36000000
 expireTimeRefreshToken=5184000000
 
 spring.servlet.multipart.max-file-size=7MB
 spring.servlet.multipart.max-request-size=7MB
 spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
-spring.security.oauth2.client.registration.google.client-secret=${
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/oauth2/callback/google
 spring.security.oauth2.client.registration.google.scope=email, profile
 spring.security.oauth2.client.provider.google.user-name-attribute=sub
