--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,10 @@ dependencies {
     compile group: 'com.nimbusds', name: 'nimbus-jose-jwt', version: '8.6'
     compile group: 'org.springframework.security.oauth', name: 'spring-security-oauth2', version: '2.0.2.RELEASE'
 
+    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
+    compile group: 'org.slf4j', name: 'slf4j-api', version: '1.7.30'
+    testCompile group: 'org.slf4j', name: 'slf4j-log4j12', version: '1.7.30'
+
     compile 'io.springfox:springfox-swagger2:2.9.2'
     compile 'io.springfox:springfox-swagger-ui:2.9.2'
     compile 'javax.validation:validation-api:2.0.1.Final'
@@ -71,6 +75,7 @@ dependencies {
     compile 'io.springfox:springfox-bean-validators:2.9.2'
     compile 'org.springframework.boot:spring-boot-starter-aop:2.2.4.RELEASE'
     compile 'org.springframework.boot:spring-boot-starter-aop:2.2.4.RELEASE'
+    testCompile group: 'org.mockito', name: 'mockito-core', version: '2.23.0'
 }
 
 test {
