add https config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,3 +41,11 @@ spring.jpa.properties.org.hibernate.envers.store_data_at_delete=true
 
 #Jooq
 spring.jooq.sql-dialect=POSTGRES
+
+#SSL
+server.port=8443
+server.ssl.enabled=true
+server.ssl.key-store=src/main/resources/tbrmkeystore.jks
+server.ssl.key-store-password=tbrmpass
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=tbrm
